testsuite/tests/parser/should_fail/T12488d.stderr
T12488d.hs:2:21: error: [GHC-58481] parse error on input ‘default’

